--- a/provider-uac-dev.yml
+++ b/provider-uac-dev.yml
@@ -3,6 +3,8 @@ server:
 spring:
   application:
     name: provider-uac
+  profiles:
+      active: dev
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/dmall?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
