--- a/provider-mdc-dev.yml
+++ b/provider-mdc-dev.yml
@@ -1,13 +1,6 @@
-server:
-  port: 8082
 spring:
-  application:
-    name: provider-mdc
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/wxrrd?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: root
-    driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 #    连接池相关设置
 #   初始化大小，最小，最大
@@ -49,3 +42,5 @@ mybatis:
 logging:
   level:
     com.dodoca.provider.mdc.mapper: debug
+env:
+  dev
