--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -17,7 +17,7 @@ zuul:
       path: /mdc/**
       serviceId: provider-mdc
 #      zuul默认不会将请求的cookie信息传递到后端服务,添加此配置可以讲cookie传递给后端
-      sensitiveHeaders:
+#      sensitiveHeaders:
 #    provider-mdc: /mdc/**
     provider-omc: /omc/**
     provider-tpc: /tpc/**
