--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -19,9 +19,9 @@ zuul:
 #      zuul默认不会将请求的cookie信息传递到后端服务,添加此配置可以讲cookie传递给后端
 #      sensitiveHeaders:
 #    provider-mdc: /mdc/**
-    provider-omc: /omc/**
-    provider-tpc: /tpc/**
-    provider-uac: /uac/**
+#    provider-omc: /omc/**
+#    provider-tpc: /tpc/**
+#    provider-uac: /uac/**
 management:
   security:
     enabled: false
