--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -9,8 +9,8 @@ zuul:
 #zuul默认反向代理eureka中注册的所有的服务,配置 ignored-services 排除不想代理的
   ignored-services: '*'
 #  正则方法排除不需要代理的路由(排除路由中含有 provider 的路由)
-  ignored-patterns:
-    - /**/provider/**
+#  ignored-patterns:
+#    - /**/provider/**
 #  配置需要zuul反向代理的服务
   routes:
     aaa:
