--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -24,6 +24,7 @@ zuul:
    provider-omc: /omc/**
    provider-tpc: /tpc/**
    provider-uac: /uac/**
+   cloud-zipkin: /zipkin/**
 management:
   security:
     enabled: false
